--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.0.6",
     "@prisma/client": "^6.4.1",
+    "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.7",
